getSplits
function to get which consignment ison each van
